# job-applier

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: draft.md  match-pending.md  score-draft.md  suggest-roles.md
.claude/skills/code-review/: SKILL.md
.claude/skills/codebase-audit/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.github/: release-notes-template.md
.github/workflows/: ci.yml  release.yml
desktop/: dev-backend.mjs  electron-builder.yml  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: check_no_personal_data.py  release.py  stamp_version.py
desktop/sidecar/: entry.py  job-applier-backend.spec
resume/: master.md
src/job_applier/: __main__.py  cli.py  config.py  contracts.py  dedupe.py  diagnostics.py  drafts.py  ingest.py  main.py  maintenance.py  pdf.py  resume_io.py  services.py  updates.py
src/job_applier/ai/: __init__.py  bans.py  drafting.py  prompt_safety.py  providers.py  scoring.py  suggest.py  tasks.py  templates.py
src/job_applier/api/: ai.py  app.py  blacklist.py  deps.py  drafts.py  profile.py  resume.py  schemas.py  serializers.py  services.py
src/job_applier/filters/: __init__.py  rules.py
src/job_applier/models/: __init__.py  db.py
src/job_applier/sources/: __init__.py  adzuna.py  ashby.py  base.py  companies.py  greenhouse.py  hackernews.py  jibe.py  lever.py  oracle.py  refresh.py  remoteok.py  remotive.py  smartrecruiters.py  weworkremotely.py  workable.py  workday.py  ycombinator.py
tests/: conftest.py  test_ai_providers.py  test_api_endpoints.py  test_blacklist.py  test_config_and_serve.py  test_data_isolation_guard.py  test_db_engine.py  test_diagnostics.py  test_drafting.py  test_drafts_pdf.py  test_filter_rules.py  test_followups.py  test_ingest.py  test_ingest_endpoint.py  test_migrations.py  test_pdf_driver.py  test_prompt_injection_hardening.py  test_rescore_on_resume_change.py  test_resume_io.py  test_score_history.py  test_scoring.py  test_search_profile.py  test_sources.py  test_status_contract.py  test_unemployment.py  test_version_and_update.py
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/scripts/: emit-esm-package.mjs
web/src/: app.css  app.d.ts  app.html
web/src/lib/: Icon.svelte  JobDescription.svelte  JobDetailPane.svelte  JobListRow.svelte  ProviderList.svelte  ScoreBadge.svelte  ScoreBreakdown.svelte  ScoreProgress.svelte  StatusTrackingCard.svelte  TailoredDraftCard.svelte  api.test.ts  api.ts  apiBase.server.ts  appearance.svelte.ts  appearance.test.ts  date.test.ts  date.ts  desktop.ts  draftCart.svelte.ts  draftCart.test.ts  jobActions.server.test.ts  jobActions.server.ts  jobFilters.test.ts  jobFilters.ts  pollTask.ts  queueFilters.test.ts  queueFilters.ts  score.test.ts  score.ts  sources.ts  taskRunner.svelte.ts  usStates.ts  (+3 more)
(+47 files in other folders)
