[project]
name = "job-applier"
version = "0.1.0"
description = "Scrape LinkedIn jobs and auto-apply with your resume"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_applier"]
